fixed issue where entity meta-data can overflow page end

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,13 +93,13 @@
        bottom: 0px;
        position: absolute;
        width: calc(100% - 60px);
-       height: 50px;
+       height: 40px;
        background-color: #333333;
-       padding: 30px;
+       padding: 20px;
        display: flex;
        .affiliate-logo {
-           width: 50px;
-           height: 50px;
+           width: 40px;
+           height: 40px;
            margin-right: 32px;
        }
        .footer-info {
